When tag selected, results list changes colour

--- a/bedtimestories/templates/basepage.html
+++ b/bedtimestories/templates/basepage.html
@@ -9,6 +9,7 @@
 -->
 <link rel="stylesheet" type="text/css" href="{% static 'blog/bootstrap.css' %}" />
 <link href='https://fonts.googleapis.com/css?family=Merriweather:300italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="{% static 'blog/extra_style.css' %}" />
 
 <!-- Profile provides more detail on icon -->
@@ -31,8 +32,7 @@
     {# Header #}
         <div id="header_top" class="row">
             <div id="header_left" class="col-xs-9">
-                <a href="{% url 'blog:index' %}"><img src="{% static 'blog/images/logo2.png' %}" alt="Site logo"
-                class="img-responsive"/>
+                <a href="{% url 'blog:index' %}"><h1>Tell Me A Story</h1>
                 </a>
                 <h4>Bedtime stories for grownups</h4>
             </div>
